<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pájaro Abarrotero</string>
    <string name="action_settings">Settings</string>

    <!-- Application Id an Client key for parse -->

    <string name="application_id">7Rd3N5WzuDSTrNOL8aY3TZZ84mYb3DATNkfNZ71k</string>
    <string name="client_key">razRXf47MMsN0LQcPAanvhxG2i9YIiBhg8zn3F0v</string>

    <!-- Strings for KCOSplashActivity -->

    <string name="title_activity_kcosplash">Pájaro Abarrotero</string>
    <string name="title_activity_kcologin">KCOLoginActivity</string>

    <string name="title_activity_kcosearch">Search</string>


    <!-- Strings for KCOLoginActivity and its xml file -->

    <string name="user">USUARIO</string>
    <string name="pass">CONTRASEÑA</string>
    <string name="register">Registro</string>
    <string name="resetpass">Olvidé mi contraseña</string>
    <string name="logo">logo</string>

    <!-- Strings for KCORegisterActivity and its xml file -->

    <string name="title_activity_kcomain_menu">KCOMainMenuActivity</string>
    <string name="title_activity_kcoregister">KCORegisterActivity</string>
    <string name="shop_name">Nombre de la tienda</string>
    <string name="my_name">Mi Nombre</string>
    <string name="address">Dirección</string>

    <!-- Strings and resources for KCOMainNavigationDrawer and its xml file -->

    <string name="title_activity_kcomain_navigation_drawer">KCOMainNavigationDrawer</string>
    <string name="title_activity_kcomain_drawer">KCOMainDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_kcoprofile">KCOProfileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_kcoorders">KCOOrdersActivity</string>
    <string name="title_activity_kcoorder_details">KCOOrderDetailsActivity</string>
    <string name="title_activity_kcoproduct_details">KCOProductDetailsActivity</string>

    <string name="title_menu">MENÚ</string>
    <string name="title_catalogue">Catálogo</string>
    <string name="title_product_details">Detalles Del Producto</string>
    <string name="title_register">Registro</string>
    <string name="title_profile">Mi Perfil</string>
    <string name="title_orders">Pedidos</string>
    <string name="title_productS">Productos</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="message_registerOK">Se ha registrado exitosamente. Debe logearse</string>
    <string name="message_registerNoOK">Hubo un problema al realizar el registro. Inténtelo de nuevo</string>
    <string name="username_reset">Ingrese su nombre de usuario</string>
    <string name="send">Enviar</string>
    <string name="title_reset_password">Escribe tu nombre de usuario y te enviaremos tu nueva contraseña</string>
    <string name="welcome">Bienvenid@</string>
    <string name="welcomepa">Pájaro Abarrotero</string>

    <string name="message_serviceNoOk">Falla de Conexión a Servidor. Intente de nuevo</string>
    <string name="title_serviceNoOK">Conexión fallida</string>
    <string name="message_loginNoOk">Nombre de usuario o contraseña no válido</string>
    <string name="title_loginNoOK">Login</string>

    <string name="tab">\u0009</string>

    <string name="txt_home">Hogar</string>
    <string name="txt_personal_care">Cuidado Personal</string>
    <string name="txt_food">Alimentos</string>
    <string name="txt_others">Otros</string>

    <string name="txt_call_us">Llámanos</string>
    <string name="txt_call_us_number">5867-1762</string>
    <string name="txt_send_us">Envía un SMS y te devolvemos la llamada </string>
    <string name="txt_send_us_number">55-6578-7679</string>

    <string name="txt_on_route">En ruta</string>
    <string name="txt_delivered">Entregados</string>

    <string name="txt_query_hint">Busca Tu Tienda</string>

</resources>