<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_fondo"
    tools:context="com.kreativeco.pjaroabarrotero.KCORegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/barra_titulos"
        android:gravity="center_vertical">
        <TextView
            style="@style/CodeFont"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:textSize="25dp"
            android:text="@string/title_register"
            />

        <TextView
            style="@style/CodeFont"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:textSize="25dp"
            android:text="@string/title_menu"
            />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="576dp"
        android:layout_height="900dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="#ffffff">

        <ImageButton
            android:layout_width="200dp"
            android:id="@+id/camera_button"
            android:layout_height="200dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/_03camara"/>
        
        <EditText
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/register"
            android:gravity="center"
            android:background="@drawable/_03nombre_tienda"/>
        
        <EditText
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:hint="@string/my_name"
            android:gravity="center"
            android:background="@drawable/_03nombre_tienda"/>

        <EditText
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:hint="@string/address"
            android:gravity="center"
            android:background="@drawable/_03direccion"/>

        <RelativeLayout
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp">

        </RelativeLayout>

        <ImageButton
            android:layout_width="500dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/_03registro"/>
    </LinearLayout>
</RelativeLayout>
