<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_fondo"
    tools:context="com.kreativeco.pjaroabarrotero.KCOProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/barra_titulos"
        android:gravity="center_vertical">

        <ImageButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:id="@+id/menu_button_profile"
            android:background="@drawable/catalogo"/>

        <TextView
            style="@style/CodeFont"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:textSize="25dp"
            android:layout_marginTop="12dp"
            android:text="@string/title_profile"
            />

        <TextView
            style="@style/CodeFont"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="12dp"
            android:textSize="25dp"
            android:text="@string/title_menu"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="576dp"
        android:layout_height="900dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="#ffffff">

        <ImageButton
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/_03camara"/>

        <EditText
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:id="@+id/shop"
            android:hint="@string/register"
            android:gravity="center"
            android:background="@drawable/_03nombre_tienda"/>

        <EditText
            android:layout_width="500dp"
            android:layout_height="50dp"
            android:id="@+id/contact"
            android:layout_marginTop="10dp"
            android:hint="@string/my_name"
            android:gravity="center"
            android:background="@drawable/_03nombre_tienda"/>

        <EditText
            android:layout_width="500dp"
            android:layout_height="100dp"
            android:id="@+id/address"
            android:layout_marginTop="10dp"
            android:hint="@string/address"
            android:gravity="center"
            android:background="@drawable/_03direccion"/>

        <RelativeLayout
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:layout_marginTop="10dp">

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="500dp"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:id="@+id/proof"
            android:onClick="LaunchOrdersMethod">
            <TextView
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:textSize="@dimen/abc_text_size_large_material"
                android:text="Pedidos"/>
            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="470dp"
                android:background="@drawable/_04flecha"/>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
